[gd_scene load_steps=7 format=3 uid="uid://dempeiar8tjic"]

[ext_resource type="Script" path="res://scripts/units/player.gd" id="1_8gonl"]
[ext_resource type="Script" path="res://old/Scripts/Units/player_camera.gd" id="2_1o6w5"]
[ext_resource type="PackedScene" uid="uid://drmxovwynq1fp" path="res://scenes/functionalities/spell_container.tscn" id="3_1xchh"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_16yd3"]
radius = 0.6

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_rfg56"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath("pivot:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:stats")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ha78t"]

[node name="player" type="CharacterBody3D" groups=["friendly", "playergroup"]]
collision_layer = 2
script = ExtResource("1_8gonl")

[node name="pivot" type="Node3D" parent="."]

[node name="mpspawner" type="MultiplayerSpawner" parent="pivot"]
spawn_path = NodePath("..")

[node name="player_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_16yd3")

[node name="camera_rotation" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
script = ExtResource("2_1o6w5")

[node name="camera_arm" type="SpringArm3D" parent="camera_rotation"]
spring_length = 10.0

[node name="player_camera" type="Camera3D" parent="camera_rotation/camera_arm"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 3, 5)

[node name="spell_container" parent="." instance=ExtResource("3_1xchh")]

[node name="auras" type="Node" parent="."]

[node name="absorbs" type="Node" parent="."]

[node name="mpsynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_rfg56")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_ha78t")
