[gd_scene load_steps=7 format=3 uid="uid://dempeiar8tjic"]

[ext_resource type="Script" path="res://scripts/units/player.gd" id="1_8gonl"]
[ext_resource type="Script" path="res://scripts/functionalities/player_input.gd" id="4_lp8kc"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_16yd3"]
radius = 0.6

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ha78t"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_rfg56"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("pivot:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:stats_current")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:selected_target")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:is_ground_targeting")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kjxoy"]
properties/0/path = NodePath("player_input:direction")
properties/0/spawn = false
properties/0/replication_mode = 1

[node name="player" type="CharacterBody3D" groups=["friendly", "player"]]
collision_layer = 2
script = ExtResource("1_8gonl")

[node name="pivot" type="Node3D" parent="."]

[node name="mpspawner" type="MultiplayerSpawner" parent="pivot"]
spawn_path = NodePath("..")

[node name="player_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_16yd3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_ha78t")

[node name="mpsynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_rfg56")

[node name="player_input" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_kjxoy")
script = ExtResource("4_lp8kc")

[node name="cd_timers" type="Node" parent="."]

[node name="cd_timer_spawner" type="MultiplayerSpawner" parent="cd_timers"]
spawn_path = NodePath("..")
